--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST I MIN RÖV</title>
     <script src="./main.js" defer></script>
-    <!-- <script src="https://sdk.scdn.co/spotify-player.js"></script> -->
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
 </head>
 <body>
     <h1>SÖK PÅ SPOTIFY LOL</h1>
@@ -16,6 +16,14 @@
 
     </div>
     <button id="playpause">Spela/Pausa</button>
+    <button id="load-song">Ladda in en låt</button>
+    <input type="range" min="1" max="100" value="100" class="slider" id="volume-slider">
+    <button id="btn-backward">Backa 30 sek</button>
+    <button id="btn-forward">Gå framåt 30 sek</button>
     <a href="/api/spotify/auth">Authentication</a>
+    <div class="playerwindow">
+
+    </div>
+
 </body>
 </html>
