--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,19 @@
             <input type="range" min="0" max="100" value="80" class="volume-slider" id="volume-slider">
         </div>
     </div>
+    <form method="post" action="/api/user/login">
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="password" name="password", placeholder="Password" required>
+        <input type="submit">
+    </form>
+
+    <form method="post" action="/api/user/register">
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="password" name="password", placeholder="Password" required>
+        <input type="password" name="repeatPassword", placeholder="Repeat Password" required>
+        <input type="submit">
+    </form>
+
 
 </body>
 </html>
