modified user login. needs to be bettered later

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
         <input type="password" name="repeatPassword", placeholder="Repeat Password" required>
         <input type="submit">
     </form>
+    <form method="post" action="/api/user/logout">
+        <input type="submit">
+    </form>
 
 
 </body>
