added ang app to public

--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEST I MIN RÖV</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="./main.js" defer></script>
-    <script src="https://sdk.scdn.co/spotify-player.js"></script>
-</head>
+  <meta charset="utf-8">
+  <title>Lazy Guitarist</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.befbb1d80eaaf0bd3ee7.css"></head>
 <body>
-    <h1>SÖK PÅ SPOTIFY LOL</h1>
-    <input type="text" list="spotify-search" id="spotify-search-bar">
-    <ul id="spotify-search">
-    </ul>
-    
-    <div class="player-area">
-        <div id="img-container"></div>
-        <button id="btn-playpause" class="paused"></button>
-        <button class="btn-repeat-thirty"id="btn-repeat-thirty"></button>
-        <button class="btn-repeat-ten"id="btn-repeat-ten"></button>
-        <button class="btn-repeat-custom"id="btn-repeat-custom"></button>
-        <div class="song-duration">
-            <input type="range" min="0" value="0" max="100" class="duration-slider" id="song-duration-slider">
-        </div>
-        <div class="volume-area">
-            <button id="vol" class="high"></button>
-            <input type="range" min="0" max="100" value="80" class="volume-slider" id="volume-slider">
-        </div>
-    </div>
-    <form method="post" action="/api/user/login">
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password", placeholder="Password" required>
-        <input type="submit">
-    </form>
-
-    <form method="post" action="/api/user/register">
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password", placeholder="Password" required>
-        <input type="password" name="repeatPassword", placeholder="Repeat Password" required>
-        <input type="submit">
-    </form>
-    <form method="post" action="/api/user/logout">
-        <input type="submit">
-    </form>
-
-
-</body>
+  <app-root></app-root>
+<script src="runtime.359d5ee4682f20e936e9.js" defer></script><script src="polyfills.bf99d438b005d57b2b31.js" defer></script><script src="main.c6d36945cadcccfed4a8.js" defer></script></body>
 </html>
